--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -127,12 +127,13 @@ a {
 
 .content__social:after{
 	content: "";
-	width: 8px;
-	height: 8px;
-	background: #d82f93;
-	border-radius: 50%;
+	background-image: url(../assets/img/circle.svg);
+	background-size: 20px 9px;
+    width: 57px;
+    height: 12px;
 	display: block;
 	position: absolute;
+	background-repeat: repeat-x;
 
 }
 
