--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,7 +4,11 @@ html, body, ul, h1, p {
 }
 
 body {
-	background: #fff;
+	background: rgb(239, 240, 241);
+    background: -webkit-linear-gradient(90deg, rgb(239, 240, 241) 21%, rgb(255, 255, 255) 0%);
+    background: -o-linear-gradient(90deg, rgb(239, 240, 241) 21%, rgb(255, 255, 255) 0%);
+    background: -ms-linear-gradient(90deg, rgb(239, 240, 241) 21%, rgb(255, 255, 255) 0%);
+    background: linear-gradient(90deg, rgb(239, 240, 241) 21%, rgb(255, 255, 255) 0%);
 }
 
 ul{
@@ -76,7 +80,7 @@ a {
 }
 
 .content__header{
-	margin-bottom: 107px;
+	margin-bottom: 81px;
 }
 
 .content{
