add gulp-compile handlebars

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,4 +1,28 @@
-<div class="header__lang">
-	<span class="header__lang_rus">РУС</span>
-	<span class="header__lang_eng">ENG</span>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>My portfolio</title>
+	<link rel="stylesheet" type="text/css" href="styles/fonts.css">
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="styles/styleOut.css">
+</head>
+<body>
+		{{> header}}
+	<div class="wrap">
+		<div class="img">
+			<img src="assets/img/avatar.jpg" class="img__avatar" width="270" height="270">
+		</div>
+		<div class="content">
+			<div class="content__header">
+				<span class="content__header_surename">{{sureName}}</span> 
+				<span class="content__header_name">Анна</span>
+			</div>
+			<div class="content__social">			
+			</div>
+			<div class="content__app">Емкость рынка, как следует из вышесказанного, позитивно уравновешивает межличностный анализ зарубежного опыта. Медиаплан, следовательно, категорически упорядочивает экспериментальнжый рекламный блок. Еще Траут показал, что маркетинг искажает бренд. Интересно отметить, что рекламный блок сфокусирован.</div>
+		</div>
+	</div>
+<script type="text/javascript" scr="scripts/scipts.js"></script>
+</body>
+</html>
