create npm scripts

--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,4 +1,4 @@
 <div class="header__lang">
-	<span class="header__lang_rus">De</span>
+	<span class="header__lang_rus">РУС</span>
 	<span class="header__lang_eng">ENG</span>
 </div>
