--- a/src/index.hbs
+++ b/src/index.hbs
@@ -18,7 +18,51 @@
 				<span class="content__header_surename">{{sureName}}</span> 
 				<span class="content__header_name">Анна</span>
 			</div>
-			<div class="content__social">			
+			<div class="content__social">
+				<ul class="content__social-list">		
+					<li class="content__social-item">
+						<img class="content__social-icon _email" src="">
+						<div class="content__social-inf">
+							<span class="content__social-text">E-mail:</span>
+							<a href="#" class="content__social-link">anya.kuznetsova@gmail.com</a>
+						</div>
+					</li>
+					<li class="content__social-item">
+						<img class="content__social-icon _git" src="">
+						<div class="content__social-inf">
+							<span class="content__social-text">GitHub:</span>
+							<a href="#" class="content__social-link">anyaVyacheslavovna</a>
+						</div>
+					</li>
+					<li class="content__social-item">
+						<img class="content__social-icon _vk" src="">
+						<div class="content__social-inf">
+							<span class="content__social-text">ВКонтакте:</span>
+							<a href="#" class="content__social-link">Анна Кузнецова</a>
+						</div>
+					</li>
+					<li class="content__social-item">
+						<img class="content__social-icon _tel" src="">
+						<div class="content__social-inf">
+							<span class="content__social-text">Телефон:</span>
+							<a href="#" class="content__social-link">+7 913 471 65 43</a>
+						</div>
+					</li>
+					<li class="content__social-item">
+						<img class="content__social-icon _tw" src="">
+						<div class="content__social-inf">
+							<span class="content__social-text">Twitter:</span>
+							<a href="#" class="content__social-link">anna.kuznetsova</a>
+						</div>
+					</li>
+					<li class="content__social-item">
+						<img class="content__social-icon _loc" src="">
+						<div class="content__social-inf">
+							<span class="content__social-text">Локация:</span>
+							<a href="#" class="content__social-link">Новосибирск</a>
+						</div>
+					</li>
+				</ul>				
 			</div>
 			<div class="content__app">Емкость рынка, как следует из вышесказанного, позитивно уравновешивает межличностный анализ зарубежного опыта. Медиаплан, следовательно, категорически упорядочивает экспериментальнжый рекламный блок. Еще Траут показал, что маркетинг искажает бренд. Интересно отметить, что рекламный блок сфокусирован.</div>
 		</div>
