--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,9 +1,9 @@
 @font-face {
 	font-family: BrutalLight;
-	src: url(../assets/fonts/BrutalTypeBold.ttf);
+	src: url('../assets/fonts/BrutalTypeBold.ttf');
 }
 
 @font-face {
 	font-family: BrutalBold;
-	src: url(../assets/fonts/BrutalTypeLight.ttf);
+	src: url('../assets/fonts/BrutalTypeLight.ttf');
 }
