--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,12 +4,13 @@ html, body, ul, h1, p {
 }
 
 body {
-	 background: rgb(239, 240, 241);
+	/*background: rgb(239, 240, 241);
     background: -webkit-linear-gradient(90deg, rgb(239, 240, 241) 21%, rgb(255, 255, 255) 0%);
     background: -o-linear-gradient(90deg, rgb(239, 240, 241) 21%, rgb(255, 255, 255) 0%);
     background: -ms-linear-gradient(90deg, rgb(239, 240, 241) 21%, rgb(255, 255, 255) 0%);
     background: linear-gradient(90deg, rgb(239, 240, 241) 21%, rgb(255, 255, 255) 0%);
-}
+*/
+	background: url('../assets/img/bg.jpg') no-repeat;}
 
 ul{
 	list-style: none;
@@ -31,7 +32,7 @@ a {
 .header {
 	height: 20px;
 	padding-top: 21px;
-	margin-bottom: 50px;
+	margin-bottom: 30px;
 }
 
 .header__lang{
@@ -43,20 +44,21 @@ a {
 .header__lang_rus{
 	margin-right: 34px;
 	color: #7a8289;
-	font: 10px "BrutalBold", Arial, sans-serif;
+	font: 10px 'BrutalBold', Arial, sans-serif;
 	font-weight: bold;
 }
 
 .header__lang_eng{
 	color: #7a8289;
-	font: 10px "BrutalBold", Arial, sans-serif;
+	font: 10px 'BrutalBold', Arial, sans-serif;
 	font-weight: bold;
 	margin-right: 26px;
 }
 
 .img {
-	margin-right: 190px;
-	display: inline-block;
+	margin-right: 27px;
+    padding-left: 82px;
+    padding-top: 15px;
 }
 .img__avatar{
 	border-radius: 50%;
@@ -69,13 +71,13 @@ a {
 
 .content__header_surename{
 	margin-right: 25px;
-	font: 45px "BrutalBold", Arial, sans-serif;
+	font: 45px 'BrutalBold', Arial, sans-serif;
 	font-weight: bold;
 	color: #656f77;
 }
 
 .content__header_name{
-	font: 45px "BrutalLight;", Arial, sans-serif;
+	font: 45px 'BrutalLight', Arial, sans-serif;
 	color: #656f77;
 }
 
@@ -91,14 +93,12 @@ a {
 	margin-bottom: 50px;
 }
 
-.content__social-icon{
-	margin-right: 17px;
-}
 .content__social-item{
 	display: inline-block;
-	width: 49%;
+	width: 39%;
     vertical-align: top;
     margin-bottom: 54px;
+    padding-left: 60px;
 }
 
 .content__social-inf{
@@ -107,12 +107,12 @@ a {
 }
 
 .content__social-text{
-	font: 14px "BrutalLight;", Arial, sans-serif;
+	font: 14px 'BrutalLight', Arial, sans-serif;
 	color: #656f77;
 }
 
 .content__social-link{
-	font: 19px "BrutalBold", Arial, sans-serif;
+	font: 19px 'BrutalBold', Arial, sans-serif;
 	font-weight: bold;
 	color: #d82f93;
 	transition: all .3s linear;
@@ -124,14 +124,14 @@ a {
 
 
 .content__app{
-	font: 16px "BrutalLight", Arial, sans-serif;
+	font: 16px 'BrutalLight', Arial, sans-serif;
 	color: #656f77;
 	position: relative;
 }
 
 .content__social:after{
-	content: "";
-	background-image: url(../assets/img/circle.svg);
+	content: '';
+	background-image: url('../assets/img/circle.svg');
 	background-size: 20px 9px;
     width: 57px;
     height: 12px;
@@ -142,49 +142,43 @@ a {
 }
 
 ._email{
-	background: url(../assets/img/email.svg) no-repeat;
+	background: url('../assets/img/email.svg') no-repeat;
 	background-size: 46px 46px;
-	width: 46px;
 	height: 46px;
 	vertical-align: middle;
 }
 
 ._git{
-	background: url(../assets/img/github.svg) no-repeat;
+	background: url('../assets/img/github.svg') no-repeat;
 	background-size: 46px 46px;
-	width: 46px;
 	height: 46px;
 	vertical-align: middle;
 }
 
 ._vk{
-	background: url(../assets/img/vk.svg) no-repeat;
+	background: url('../assets/img/vk.svg') no-repeat;
 	background-size: 46px 46px;
-	width: 46px;
 	height: 46px;
 	vertical-align: middle;
 }
 
 ._tel{
-	background: url(../assets/img/phone.svg) no-repeat;
+	background: url('../assets/img/phone.svg') no-repeat;
 	background-size: 46px 46px;
-	width: 46px;
 	height: 46px;
 	vertical-align: middle;
 }
 
 ._tw{
-	background: url(../assets/img/twitter.svg) no-repeat;
+	background: url('../assets/img/twitter.svg') no-repeat;
 	background-size: 46px 46px;
-	width: 46px;
 	height: 46px;
 	vertical-align: middle;
 }
 
 ._loc{ 
-	background: url(../assets/img/location.svg) no-repeat;
+	background: url('../assets/img/location.svg') no-repeat;
 	background-size: 46px 46px;
-	width: 46px;
 	height: 46px;
 	vertical-align: middle;
 }
